vlib/v/checker/tests/dbg_outside_fn_err.vv
module main
$dbg;
fn main() {}
